@@ -1,11 +1,9 @@
-# -*- coding: utf-8 -*-
-from __future__ import with_statement
-
 from datetime import datetime, timedelta
 
 import flask
 
 import flask_babel as babel
+from flask_babel import get_babel
 
 
 def test_basics():
@@ -22,36 +20,13 @@ def test_basics():
         assert babel.format_timedelta(delta, threshold=1) == '6 days'
 
     with app.test_request_context():
-        app.config['BABEL_DEFAULT_TIMEZONE'] = 'Europe/Vienna'
+        get_babel(app).default_timezone = 'Europe/Vienna'
         assert babel.format_datetime(d) == 'Apr 12, 2010, 3:46:00 PM'
         assert babel.format_date(d) == 'Apr 12, 2010'
         assert babel.format_time(d) == '3:46:00 PM'
 
     with app.test_request_context():
-        app.config['BABEL_DEFAULT_LOCALE'] = 'de_DE'
-        assert babel.format_datetime(d, 'long') == \
-            '12. April 2010 um 15:46:00 MESZ'
-
-
-def test_init_app():
-    b = babel.Babel()
-    app = flask.Flask(__name__)
-    b.init_app(app)
-    d = datetime(2010, 4, 12, 13, 46)
-
-    with app.test_request_context():
-        assert babel.format_datetime(d) == 'Apr 12, 2010, 1:46:00 PM'
-        assert babel.format_date(d) == 'Apr 12, 2010'
-        assert babel.format_time(d) == '1:46:00 PM'
-
-    with app.test_request_context():
-        app.config['BABEL_DEFAULT_TIMEZONE'] = 'Europe/Vienna'
-        assert babel.format_datetime(d) == 'Apr 12, 2010, 3:46:00 PM'
-        assert babel.format_date(d) == 'Apr 12, 2010'
-        assert babel.format_time(d) == '3:46:00 PM'
-
-    with app.test_request_context():
-        app.config['BABEL_DEFAULT_LOCALE'] = 'de_DE'
+        get_babel(app).default_locale = 'de_DE'
         assert babel.format_datetime(d, 'long') == \
             '12. April 2010 um 15:46:00 MESZ'
 
@@ -79,13 +54,14 @@ def test_custom_locale_selector():
     the_timezone = 'UTC'
     the_locale = 'en_US'
 
-    @b.localeselector
     def select_locale():
         return the_locale
 
-    @b.timezoneselector
     def select_timezone():
         return the_timezone
+
+    get_babel(app).locale_selector = select_locale
+    get_babel(app).timezone_selector = select_timezone
 
     with app.test_request_context():
         assert babel.format_datetime(d) == 'Apr 12, 2010, 1:46:00 PM'
@@ -103,6 +79,6 @@ def test_refreshing():
     d = datetime(2010, 4, 12, 13, 46)
     with app.test_request_context():
         assert babel.format_datetime(d) == 'Apr 12, 2010, 1:46:00 PM'
-        app.config['BABEL_DEFAULT_TIMEZONE'] = 'Europe/Vienna'
+        get_babel(app).default_timezone = 'Europe/Vienna'
         babel.refresh()
         assert babel.format_datetime(d) == 'Apr 12, 2010, 3:46:00 PM'
