@@ -1,6 +1,7 @@
 v3.0.0
 
-Major version bump as this version removes support for Python 3.5 and 3.6.
+Major version bump as this version removes support for Python 3.5 and 3.6, along with multiple
+major breaking changes. Hope you've been following SemVer :)
 
 - Dropped support for end-of-life Python 3.5 and 3.6, added tests for 3.10 and 3.11.
 - Fixes to documentation to address outdated links and settings (#204, 201)
@@ -8,3 +9,8 @@ Major version bump as this version removes support for Python 3.5 and 3.6.
 - Removed Babel._date_formats, use the public Babel.date_formats instead.
 - list_translations() always returns the default locale, even if it does not exist. (#75)
 - Add lazy_npgettext() (#68)
+- Babel.locale_selector and Babel.timezone_selector no longer exist. They must be provided
+  either when the Babel() object is created or when init_app() is called. This is to support
+  having a single Babel object for multiple Flask apps (#107) as well as to simplify settings
+  and multi-threaded state.
+- Most configuration options can be passed directly through init_app().
